force-app/main/default/objects/Lead/fields/Sansan_CI__AutoPromotedLeadCountOfFailure__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotedLeadCountOfFailure__c</fullName>
    <label>(Sansan)リード自動昇格実行失敗数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>