force-app/main/default/objects/Lead/fields/Sansan_CI__AutoPromotedLeadFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotedLeadFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Sansan)リード自動昇格実行済フラグ</label>
    <type>Checkbox</type>
</CustomField>