force-app/main/default/objects/Lead/fields/Sansan_CI__AutoPromotionLeadErrMsg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotionLeadErrMsg__c</fullName>
    <label>(Sansan)リード自動昇格エラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>