force-app/main/default/objects/Lead/fields/Sansan_CI__AutoPromotionLeadExcludedFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotionLeadExcludedFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Sansan)リード自動昇格対象外フラグ</label>
    <type>Checkbox</type>
</CustomField>