force-app/main/default/objects/Lead/fields/Sansan_CI__AutoPromotionLeadFrom__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotionLeadFrom__c</fullName>
    <defaultValue>&quot;Non Auto Promotion&quot;</defaultValue>
    <label>(Sansan)リード自動昇格元</label>
    <length>255</length>
    <type>Text</type>
</CustomField>