force-app/main/default/objects/Lead/fields/Sansan_CI__IsManualLinkExcluded__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsManualLinkExcluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手動関連づけ対象外フラグ</label>
    <type>Checkbox</type>
</CustomField>