force-app/main/default/objects/Lead/fields/Sansan_CI__IsSocPersonIdIdentified__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsSocPersonIdIdentified__c</fullName>
    <formula>IF (
     AND(
         Sansan_CI__CI_SOC_FK__c != &quot;&quot;,
         Sansan_CI__CI_PersonId_FK__c != &quot;&quot;
         ),
     true,
     false
     )</formula>
    <label>(Sansan)SOC/CI人物ID識別済み</label>
    <type>Checkbox</type>
</CustomField>