force-app/main/default/objects/Lead/fields/Sansan_CI__LastModifiedFromBizCardId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LastModifiedFromBizCardId__c</fullName>
    <label>最終更新元名刺レコードID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>