force-app/main/default/objects/Lead/fields/Sansan_CI__LastModifiedFromSansanBizCardId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LastModifiedFromSansanBizCardId__c</fullName>
    <label>最終更新元名刺ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>