force-app/main/default/objects/Lead/fields/Sansan_CI__ResignFlag__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ResignFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退職済み</label>
    <type>Checkbox</type>
</CustomField>