force-app/main/default/objects/Lead/fields/Sansan_CI__Sansan_CompanyId_FK__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Sansan_CompanyId_FK__c</fullName>
    <externalId>true</externalId>
    <label>Sansan 会社 ID(システム)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>