force-app/main/default/objects/Lead/fields/Sansan_CI__Sansan_PersonId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Sansan_PersonId__c</fullName>
    <externalId>true</externalId>
    <label>Sansan 人物 ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>